# uugear-mega4-lib

./: .gitignore  CMakeLists.txt  README.md
examples/: toggle_port.cpp
include/: Mega4Hub.hpp
include/UUGear/Mega4/: DevicePlugin.hpp  Mega4Hub.hpp  Mega4Types.hpp  PluginManager.hpp
include/UUGear/Mega4/plugins/: StoragePlugin.hpp
src/: Mega4Hub.cpp
src/Mega4/: Mega4Hub.cpp
src/Mega4/plugins/: PluginManager.cpp
src/Mega4/plugins/StoragePlugin/: StoragePlugin.cpp  StoragePlugin.hpp
tests/: test_Mega4Hub.cpp
tests/plugins/: test_Mega4Hub_Plugins.cpp
